# scam-bet

./: .gitignore  Cargo.toml  Makefile  build.rs  build_games  bun.lockb  docker-compose.yml  package.json  tailwind.config.js  tsconfig.json
games/roulette/: index.ts
hydrate/: Cargo.toml
hydrate/src/: lib.rs
server/: .env  Cargo.toml  build.rs
server/src/: fileserv.rs  main.rs
server/src/database/: cache.rs  main_db.rs  mod.rs
server/src/routes/: handlers.rs  mod.rs
src/: app.rs  lib.rs  main.rs
style/: main.scss
wasm-games/roulette/src/: game.zig  main.zig
web/: Cargo.toml
web/src/: error_template.rs  lib.rs
