[workspace]
members = ["server", "web", "hydrate"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[[workspace.metadata.leptos]]
name = "scam-bet"
bin-package = "server"
lib-package = "hydrate"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
