[package]
name = "hydrate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web = { path = "../web", default-features = false, features = ["hydrate"] }
wasm-bindgen = "=0.2.87"
console_error_panic_hook = "0.1.7"
console_log = "1"
log = "0.4.19"
simple_logger = "4.2.0"
leptos = { version = "0.4.6", features = ["hydrate"] }
