[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.19"
leptos = { version = "0.4.6", features = ["ssr"] }
leptos_axum = "0.4.6"
leptos_router = { version = "0.4.6", features = ["ssr"] }
tokio = "1.29.1"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
web = { path = "../web", features = ["ssr"] }
simple_logger = "4.2.0"
log = "0.4.19"
scylla = "0.3.1"
uuid = "1.4.1"
chrono = "0.4.26"
redis = { version = "0.23.1", features = ["tokio-rustls-comp", "r2d2"] }
anyhow = "1.0.72"
thiserror = "1.0.44"
r2d2 = "0.8.10"

[build-dependencies]
dotenv-build = "0.1.1"
