[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = "0.4.6"
leptos_axum = { version = "0.4.6", optional = true }
leptos_meta = "0.4.6"
leptos_router = "0.4.6"
thiserror = "1.0.44"
http = "0.2.9"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
